@@ -1,3 +1,5 @@
+ 20091209 (T.S)
+ * amdeth.h: added public declaration of amdEthDumpStats()
  20091017 (T.S)
  * amdeth.c: removed CPP redefines.
 
